agroups: add selection logic  for ChartSection